# lerpy

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  requirements.txt  resize_image.py  setup.cfg  setup.py
docs/: requirements.rst
docs/source/: api.rst  conf.py  index-BBEditPreviewTemp.rst.html  index.rst
examples/: resize_image.py
lerpy/: __init__.py  __version__.py  lerpy.py  resize.py  utility.py
src/lerpy/: utility.py
tests/: common.py  test_examples.py  test_lerpy.py  test_resize.py
